# passepartout

./: .gitignore  CLAUDE.md  LICENSE  README.md  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.main.config.ts
.devcontainer/: Dockerfile
opencode_workspace/.opencode/skills/latchkey/: SKILL.md
src/: App.tsx  index.css  main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: credentials.rs  fs_utils.rs  main.rs  opencode.rs  paths.rs
